# h5boss

./: .classpath  .gitignore  README.md  cori-setup  cori-setup-serial  h5boss-util.ipynb
h5boss_c/: Makefile  compound_copy.c  compound_copy.h  hdf.txt  main.c  mt.c  nodes1.txt  nodes1k.txt  parse_node.c  parse_node.h  pmf.txt  submit.sh  subselect.c  subset.c
h5boss_c/h5check-2.0.1/: Makefile  Makefile.in  config.status  configure  configure.ac
h5boss_c/h5check-2.0.1/config/: Makefile.am.blank  commence.am  conclude.am
h5boss_c/h5check-2.0.1/src/: Makefile  Makefile.am  Makefile.in  h5_check.h  h5checker.c  h5checkerV2_0.c
h5boss_c/h5check-2.0.1/src/.deps/: h5checker.Po  h5checkerV2_0.Po  h5checker_api.Po  h5error.Po  h5pline.Po
h5boss_c/h5check-2.0.1/test/: Makefile  testgen
h5boss_c/h5check-2.0.1/tool/: Makefile  h5check  h5checker_main.c
h5boss_c/h5check-2.0.1/tool/.deps/: h5checker_main.Po
h5boss_py/: setup.py
h5boss_py/demo/: 1k1m-cori.sh  1k1m-project.sh  1k1m.sh  all-ost1  badfile  bbtest1  bbtest2  boss2hdf5-parallel.py  h5boss-test.ipynb  h5boss_test_100.xlsx  h5boss_test_5.xlsx  input  input-1  input-2  input-full  input-name  input-small  pmf1.xlsx  pmf2.xlsx  pmf3.xlsx  submit-bb.sh  submit.sh  submit_part.sh  submit_sub.sh  submit_subset.sh  test_fibers  test_mjds  test_plates  tuple_file
h5boss_py/demo/pmf-list/: pmf-1k  pmf100k  pmf10k  pmf1k  pmf200k  pmf5k  pmfs100k  pmfs10k  pmfs1k  pmfs200k  pmfs5k
h5boss_py/demo/pmf-list/large-scale/: pmf100k-shuffle.csv  pmf100k-sorted.csv  pmf10k-shuffle.csv  pmf10k-sorted.csv  pmf1k-sorted.csv  pmf200k-shuffle.csv  pmf200k-sorted.csv
h5boss_py/demo/slurm_script/: submit-bb.sh
h5boss_py/docs/: Makefile  make.bat  readme
h5boss_py/docs/source/: add.rst  boss2fits.rst  boss2hdf5-parallel.rst  boss2hdf5_v1.rst  boss2hdf5_v2.rst  conf.py  convert.rst  csubset.rst  fits2hdf.rst  h5boss.rst  h5bossdev.rst  h5bossfmts.rst  index.rst  install.rst  modules.rst  practice.rst  psubset.rst  subset.rst  subset_mpi_v1.rst  subset_mpi_v2.rst  update.rst
h5boss_py/docs/source/_static/: pmf_update.txt
h5boss_py/h5boss/: add.py  boss2hdf5.py  boss2hdf5_v1.py  boss2hdf5_v2.py  h5map.py  io.py  pmf.py  pmj.py  remove.py  select.py  select_add.py  select_update.py  selectmpi.py  selectmpi_v1.py  selectmpi_v2.py  setup.py  sql.py
h5boss_py/script/: add  boss2hdf5_v1  boss2hdf5_v2  subset  subset_mpi_v1  subset_mpi_v2  update
h5boss_py/scripts/: add  add_index_cache.py  boss2hdf5  boss2hdf5-parallel.py  boss2hdf5_v1  random  random-pmf.py  select  submit.sh  subset  subset.py  subset_mpi-sf.py  subset_mpi.py  subset_mpi_v1  subset_mpi_v1.py  subset_mpi_v2  subset_mpi_v2.py  test_file_creation.py  update
h5boss_py/test/: pmf.xlsx  random  test_remove.py
scripts/: boss2fits  boss2hdf5
